--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -98,11 +98,11 @@
 
 .theme-btn,
 .logout-btn {
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(224, 208, 231, 0.2);
   border: none;
-  color: white;
+  color: rgb(249, 247, 247);
   padding: 8px 10px;
-  border-radius: 50%;
+  border-radius: 20px;
   cursor: pointer;
   transition: transform 0.3s ease;
 }
