--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -7,7 +7,7 @@
 
 /* Navbar */
 .navbar {
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background: linear-gradient(135deg, #66c5ea 0%, #669ce7 100%);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   position: sticky;
   top: 0;
@@ -158,7 +158,7 @@
     position: absolute;
     top: 70px;
     right: 0;
-    background:rgba(174, 147, 193, 0.1);
+    background:rgb(158, 204, 240);
     flex-direction: column;
     width: 100%;
     align-items: center;
