--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -33,8 +33,8 @@
 }
 
 .logo-img {
-  width: 45px;
-  height: 45px;
+  width: 55px;
+  height: 55px;
   border-radius: 50%;
   object-fit: cover;
   border: 2px solid white;
@@ -114,7 +114,7 @@
 
 /* Footer */
 .footer {
-  background-color: #222;
+  background-color: #0c1a69;
   color: white;
   padding: 30px 20px;
   text-align: center;
@@ -158,6 +158,7 @@
     position: absolute;
     top: 70px;
     right: 0;
+    color: #ccc;
     background:rgb(158, 204, 240);
     flex-direction: column;
     width: 100%;
