--- a/src/styles/Students.css
+++ b/src/styles/Students.css
@@ -97,14 +97,14 @@
   padding: 8px 12px;
   border: none;
   border-radius: 6px;
-  background-color: #764ba2;
+  background-color: #3c90ef;
   color: white;
   cursor: pointer;
 }
 
 .details-btn:hover,
 .receipt-btn:hover {
-  background-color: #5a378f;
+  background-color: #ad8ae3;
 }
 
 /* Modal */
