--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -97,3 +97,20 @@
   text-align: center;
   border: 1px solid #fcc;
 }
+
+.register-link {
+  text-align: center;
+  font-size: 14px;
+  margin-top: 10px;
+  color: #555;
+}
+
+.register-link a {
+  color: #667eea;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.register-link a:hover {
+  text-decoration: underline;
+}
